<resources>
    <string name="app_name">Instagram</string>
    <string name="email_edt">Email</string>
    <string name="password_edt">Password</string>
    <string name="login_btn">Login</string>
    <string name="register_txt">Create a New Account</string>
    <string name="fullName_edt">Full Name</string>
    <string name="login_txt">Have an account LogIn</string>
    <string name="confirm_password_edt">Confirm Password</string>
    <string name="register_btn">Register</string>
    <string name="upload_title_txt">Upload your avatar</string>
    <string name="upload_image">Upload Image</string>
    <string name="create_post">Create Post</string>
    <string name="ella_txt">Ella</string>
    <string name="follow_txt">Follow</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>